# xiaohongshu-mcp

./: .all-contributorsrc  .dockerignore  .gitignore  .kimi-agent.yml  .mcp.json  AGENTS.md  ALBUM_SYNC_COMPLETE_GUIDE.md  ALBUM_SYNC_README.md  AUTOMATION_SOLUTION.md  CHANGELOG.md  CLAUDE.md  Containerfile  DONATIONS.md  Dockerfile  Dockerfile.arm64  Dockerfile.feishu-bot  Dockerfile.manager  Dockerfile.stdio  FIX_SESSION_MANAGEMENT.md  HTTP_API_USAGE.md  PRODUCT_FEATURE.md  Phase3-完成报告.md  README.en.md  README.md  README_EN.md  account_handlers.go  account_handlers_test.go  account_login.go  account_login_security_test.go  account_rest_handlers.go  account_rest_handlers_test.go  account_tools.go  account_tools_error_test.go  account_tools_test.go  album_sync_tool.py  album_sync_via_server.py  app_server.go  auto-sync-albums.sh  auto_sync_api.py  auto_sync_direct.py  (+88 more)
.claude/: settings.local.json
.codex-plugin/: plugin.json
.tekton/: pipeline.yaml
account/: account_test.go  contract_test.go  cookie_removal_test.go  cookie_store.go  errors.go  lock_manager.go  management.go  management_test.go  manager.go  migration.go  persistence.go  persistence_security_test.go  registry.go  t8_regression_test.go  types.go
apps/content-remix/backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/content-remix/backend/app/: __init__.py  celery_worker.py  config.py  llm.py  main.py  mcp_client.py  models.py  storage.py  workflow.py
apps/content-remix/backend/tests/: test_api.py  test_workflow.py
browser/: browser.go  browser_download.go  (+2 more)
(+245 files in other folders)
