[project]
name = "content-remix-backend"
version = "0.1.0"
description = "ContentRemixAgent backend built with FastAPI + LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4.0,<6.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "langgraph>=0.2.34,<0.4.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "redis>=5.0.0,<6.0.0",
  "requests>=2.32.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
